Tried to improve the maven-site configuration
git-svn-id: https://svn.apache.org/repos/asf/directory/shared/trunk@1767448 13f79535-47bb-0310-9956-ffa450edef68