@@ -30,7 +30,7 @@
   <artifactId>api-parent</artifactId>
   <name>Apache Directory LDAP API</name>
   <packaging>pom</packaging>
-  <version>1.0.0-RC3-SNAPSHOT</version>
+  <version>1.0.0-RC2</version>
 
   <properties>
     <additionalparam>-Xdoclint:none</additionalparam>
@@ -260,6 +260,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
+        <version>3.4</version>
         <dependencies>
           <!-- Add support for 'scp'/'sftp' -->
           <dependency>
@@ -274,210 +275,17 @@
             <version>2.1</version>
           </dependency>
         </dependencies>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
-          <reportPlugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-jxr-plugin</artifactId>
-              <configuration>
-                  <aggregate>true</aggregate>
-              </configuration>
-            </plugin>
-       
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-report-plugin</artifactId>
-              <configuration>
-                <aggregate>true</aggregate>
-               <forkCount>3</forkCount>
-               <reuseForks>true</reuseForks>
-               <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-              </configuration>
-            </plugin>
-      
-            <!-- plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-pmd-plugin</artifactId>
-              <configuration>
-                <linkXref>true</linkXref>
-                <sourceEncoding>utf-8</sourceEncoding>
-                <minimumTokens>100</minimumTokens>
-                <targetJdk>1.7</targetJdk>
-                <aggregate>true</aggregate>
-              </configuration>
-            </plugin -->
-      
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-project-info-reports-plugin</artifactId>
-            </plugin>
-      
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>taglist-maven-plugin</artifactId>
-              <configuration>
-                <tags>
-                  <tag>TODO</tag>
-                  <tag>@todo</tag>
-                  <tag>@deprecated</tag>
-                  <tag>FIXME</tag>
-                </tags>
-              </configuration>
-            </plugin>
-      
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-javadoc-plugin</artifactId>
-              <configuration>
-                <sourcepath>${project.basedir}/src/main/java</sourcepath>
-                <minmemory>512m</minmemory>
-                <maxmemory>1g</maxmemory>
-                <linksource>true</linksource>
-                <tags>
-                  <tag>
-                    <name>todo</name>
-                    <!-- todo tag for all places -->
-                    <placement>a</placement>
-                    <head>To do:</head>
-                  </tag>
-                </tags>
-                <source>1.7</source>
-                <excludePackageNames>org.apache.directory.api.ldap.model.schema.syntaxes</excludePackageNames>
-              </configuration>
-              <reportSets>
-                <reportSet>
-                  <reports>
-                    <report>aggregate</report>
-                    <report>test-aggregate</report>
-                  </reports>
-                </reportSet>
-              </reportSets>
-            </plugin>
-      
-<!-- Disabled because of Hudson problems, see http://jira.codehaus.org/browse/MFINDBUGS-126
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>findbugs-maven-plugin</artifactId>
-              <configuration>
-                <xrefLocation>${project.reporting.outputDirectory}/../xref</xrefLocation>
-                <xrefTestLocation>${project.reporting.outputDirectory}/../xref-test</xrefTestLocation>
-                <! - - required by dashboard plugin and hudson - - >
-                <xmlOutput>true</xmlOutput>
-                <effort>Max</effort>
-                <findbugsXmlOutput>true</findbugsXmlOutput>
-                <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-              </configuration>
-            </plugin>
--->
-      
-<!-- Disabled because of Hudson problems
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>cobertura-maven-plugin</artifactId>
-              <configuration>
-                <instrumentation>
-                  <excludes>
-                    <exclude>org/apache/directory/api/**/*Constants.class</exclude>
-                  </excludes>
-                </instrumentation>
-              </configuration>
-            </plugin>
--->
-      
-            <!-- plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-checkstyle-plugin</artifactId>
-              <configuration>
-                <configLocation>directory-checks.xml</configLocation>
-                <suppressionsLocation>${basedir}/src/checkstyle/suppressions.xml</suppressionsLocation>
-                <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
-                <xrefLocation>${project.reporting.outputDirectory}/../xref</xrefLocation>
-              </configuration>
-            </plugin -->
-      
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>versions-maven-plugin</artifactId>
-              <reportSets>
-                <reportSet>
-                  <reports>
-                    <report>dependency-updates-report</report>
-                    <report>plugin-updates-report</report>
-                    <report>property-updates-report</report>
-                  </reports>
-                </reportSet>
-              </reportSets>
-            </plugin>
-      
-            <plugin>
-              <groupId>org.apache.rat</groupId>
-              <artifactId>apache-rat-plugin</artifactId>
-              <!-- must add configuration here too, it isn't inherited from <pluginConfiguration> :-( -->
-              <configuration>
-                <excludeSubProjects>false</excludeSubProjects>
-                <excludes>
-                  <!-- MAVEN_DEFAULT_EXCLUDES -->
-                  <exclude>**/target/**/*</exclude>
-                  <exclude>**/cobertura.ser</exclude>
-                  <!-- ECLIPSE_DEFAULT_EXCLUDES -->
-                  <exclude>**/.classpath</exclude>
-                  <exclude>**/.project</exclude>
-                  <exclude>**/.settings/**/*</exclude>
-                  <!-- IDEA_DEFAULT_EXCLUDES -->
-                  <exclude>**/*.iml</exclude>
-                  <exclude>**/*.ipr</exclude>
-                  <exclude>**/*.iws</exclude>
-                  <!-- MANIFEST_MF_EXCLUDES -->
-                  <exclude>**/MANIFEST.MF</exclude>
-                  <!-- 3RD_PARTY_LICENSES -->
-                  <exclude>distribution/src/main/release/licenses/*</exclude>
-                  <exclude>src/main/release/licenses/*</exclude>
-                  <!-- Missing license header in dependency reduced pom, see http://jira.codehaus.org/browse/MSHADE-48 -->
-                  <exclude>**/dependency-reduced-pom.xml</exclude>
-                  <!-- Generated ldif files -->
-                  <exclude>**/src/main/resources/schema/**/*.ldif</exclude>
-                  <exclude>**/src/main/resources/schema-all.ldif</exclude>
-                  <exclude>**/src/main/resources/schema/**/*.ldif</exclude>
-                  <exclude>**/src/main/resources/schema-all.ldif</exclude>
-                  <!-- Files having a Bouncy Castle license -->
-                  <exclude>ldap/src/main/java/org/apache/directory/api/asn1/der/*.java</exclude>
-                  <exclude>src/main/java/org/apache/directory/api/asn1/der/*.java</exclude>
-                </excludes>
-              </configuration>
-            </plugin>
-      
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>javancss-maven-plugin</artifactId>
-            </plugin>
-      
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>jdepend-maven-plugin</artifactId>
-            </plugin>
-      
-<!--
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-changes-plugin</artifactId>
-              <configuration>
-                <onlyCurrentVersion>true</onlyCurrentVersion>
-                <resolutionIds>Fixed</resolutionIds>
-                <statusIds>Resolved,Closed</statusIds>
-                <columnNames>Type,Key,Summary,Status,Resolution,Fix Version</columnNames>
-              </configuration>
-              <reportSets>
-                <reportSet>
-                  <reports>
-                    <report>jira-report</report>
-                  </reports>
-                </reportSet>
-              </reportSets>
-            </plugin>
--->
-          </reportPlugins>
+          <show>private</show>
+          <nohelp>true</nohelp>
         </configuration>
       </plugin>
+
 
       <plugin>
         <groupId>de.thetaphi</groupId>
@@ -779,13 +587,111 @@
     </dependencies>
   </dependencyManagement>
 
-  <dependencies />
-
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/directory/shared/trunk</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/directory/shared/trunk</developerConnection>
-    <url>http://svn.apache.org/viewvc/directory/shared/trunk</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/directory/shared/tags/1.0.0-RC2</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/directory/shared/tags/1.0.0-RC2</developerConnection>
+    <url>http://svn.apache.org/viewvc/directory/shared/tags/1.0.0-RC2</url>
   </scm>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <configuration>
+          <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+          <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+        </configuration>
+        
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>dependencies</report>
+              <report>scm</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+     
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jxr-plugin</artifactId>
+        <inherited>false</inherited>
+        <configuration>
+          <aggregate>true</aggregate>
+          <inputEncoding>UTF-8</inputEncoding>
+          <outputEncoding>UTF-8</outputEncoding>
+          <windowTitle>Apache LDAP API ${project.version} Cross Reference</windowTitle>
+          <docTitle>Apache LDAP API ${project.version} Cross Reference</docTitle>
+        </configuration>
+      </plugin>
+ 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <windowtitle>Apache LDAP API ${project.version} API Documentation</windowtitle>
+          <doctitle>Apache LDAP API ${project.version} API Documentation</doctitle>
+          <sourcepath>${project.basedir}/src/main/java</sourcepath>
+          <minmemory>512m</minmemory>
+          <maxmemory>1g</maxmemory>
+          <linksource>true</linksource>
+          <tags>
+            <tag>
+              <name>todo</name>
+              <!-- todo tag for all places -->
+              <placement>a</placement>
+              <head>To do:</head>
+            </tag>
+          </tags>
+          <source>1.7</source>
+          <excludePackageNames>org.apache.directory.api.ldap.model.schema.syntaxes</excludePackageNames>
+          <show>public</show>
+        </configuration>
+
+        <reportSets>
+          <reportSet>
+            <id>aggregate</id>
+            <inherited>false</inherited>
+            <reports>
+              <report>aggregate</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+
+        <!-- reportSets>
+          <reportSet>
+            <id>apidocs</id>
+            <configuration>
+              <doctitle>Apache LDAP API ${project.version} Javadoc</doctitle>
+              <windowtitle>Apache LDAP API ${project.version} Javadoc</windowtitle>
+
+              <tags>
+                <tag>
+                  <name>@todo</name>
+                  <name>TODO</name>
+                  <name>FIXME</name>
+                  <placement>a</placement>
+                  <head>To do :</head>
+                </tag>
+              </tags>
+ 
+            </configuration>
+ 
+            <reports>
+              <report>apidocs</report>
+            </reports>
+    
+
+            <reports>
+              <report>aggregate</report>
+              <report>test-aggregate</report>
+            </reports>
+          </reportSet>
+        </reportSets -->
+      </plugin>
+    </plugins>
+  </reporting>
 
   <profiles>
     <profile>
